objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountRange__c</fullName>
        <label>AccountRange</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Rate__c</fullName>
        <label>Acc. Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accountinfo__c</fullName>
        <label>Accountinfo</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>wich one is an active need to choose</description>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Market_value__c</fullName>
        <label>Market value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>No of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onboarding_Status__c</fullName>
        <label>Onboarding Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PremiumAcc__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>PremiumAcc</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Premium_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking Account is Premium or Not</description>
        <label>Premium Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_revenue__c</fullName>
        <label>Related revenue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>anthemtestAcc__c</fullName>
        <label>anthemtestAcc</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oct17__c</fullName>
        <label>Testoct17</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testcap1__c</fullName>
        <label>testcap1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testdelete__c</fullName>
        <label>testdelete</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testfield__c</fullName>
        <description>testing field to define the values</description>
        <label>testfield</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Anthemtest1</fullName>
        <active>true</active>
        <label>Anthemtest1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Anthemtest2</fullName>
        <active>true</active>
        <label>Anthemtest2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Anthemtest3</fullName>
        <active>true</active>
        <label>Anthemtest3</label>
    </recordTypes>
    <recordTypes>
        <fullName>Anthemtest4</fullName>
        <active>true</active>
        <label>Anthemtest4</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Industry_should_not_null</fullName>
        <active>true</active>
        <description>Industry should not null</description>
        <errorConditionFormula>AccountNumber   =  Null</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>Account Number should not be null value</errorMessage>
    </validationRules>
</CustomObject>